--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carregador Inteligente 12V com XL4015 – Compre Já!</title>
+  <title>Carregador Inteligente 12V com XL4015 – DG Manutenção</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,24 +12,33 @@
       margin: 0;
       padding: 0;
     }
+
     header {
-      background: #00796b;
+      background: #000;
       color: white;
       padding: 20px 0;
       text-align: center;
       box-shadow: 0 2px 4px rgb(0 0 0 / 0.1);
     }
+
+    header img {
+      height: 80px;
+      margin-bottom: 10px;
+    }
+
     header h1 {
       margin: 0;
       font-weight: 700;
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
+
     main {
       max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
       text-align: center;
     }
+
     .produto-img {
       max-width: 100%;
       height: auto;
@@ -39,12 +48,14 @@
       position: relative;
       margin-bottom: 40px;
     }
+
     .descricao {
       font-size: 1.2rem;
       line-height: 1.6;
       margin-bottom: 30px;
       color: #555;
     }
+
     .beneficios {
       display: flex;
       flex-wrap: wrap;
@@ -52,6 +63,7 @@
       gap: 20px;
       margin-bottom: 40px;
     }
+
     .beneficio {
       background: #e0f2f1;
       border-radius: 8px;
@@ -61,14 +73,17 @@
       cursor: pointer;
       position: relative;
     }
+
     .beneficio:hover {
       background: #b2dfdb;
     }
+
     .beneficio h3 {
       margin-top: 0;
       font-size: 1.1rem;
       color: #00796b;
     }
+
     .btn-comprar {
       background: #00796b;
       color: white;
@@ -81,30 +96,29 @@
       transition: background 0.3s ease;
       box-shadow: 0 4px 8px rgb(0 0 0 / 0.15);
     }
+
     .btn-comprar:hover {
       background: #004d40;
     }
 
-    /* Tooltip */
     .tooltip {
       display: none;
       position: absolute;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0, 0, 0, 0.85);
       color: #fff;
       padding: 8px 12px;
       border-radius: 5px;
       font-size: 14px;
       pointer-events: none;
-      max-width: 240px;
       z-index: 1000;
     }
 
-    /* Responsivo */
     @media(max-width: 600px) {
       .beneficios {
         flex-direction: column;
         gap: 15px;
       }
+
       .beneficio {
         width: 100%;
       }
@@ -114,12 +128,13 @@
 <body>
 
 <header>
+  <!-- Substitua logo.png pelo nome correto se for diferente -->
+  <img src="logo.png" alt="Logo DG Manutenção" />
   <h1>Carregador Inteligente 12V com XL4015</h1>
 </header>
 
 <main>
-
-  <img src="https://i.imgur.com/GVeIUDg.png" alt="Diagrama do Carregador XL4015" class="produto-img" 
+  <img src="https://i.imgur.com/GVeIUDg.png" alt="Diagrama do Carregador XL4015" class="produto-img"
        onmousemove="mostrarTooltip(event, 'Circuito eficiente e seguro para carregar baterias 12V')"
        onmouseout="esconderTooltip()" />
 
@@ -133,11 +148,13 @@
       <h3>Regulador XL4015</h3>
       Conversão precisa de tensão e corrente
     </div>
+
     <div class="beneficio" onmousemove="mostrarTooltip(event, 'Protege contra sobrecarga e inversão de polaridade')"
          onmouseout="esconderTooltip()">
       <h3>Segurança</h3>
       Proteção contra curto-circuito e sobrecarga
     </div>
+
     <div class="beneficio" onmousemove="mostrarTooltip(event, 'Alta eficiência para menor desperdício')"
          onmouseout="esconderTooltip()">
       <h3>Alta Eficiência</h3>
@@ -159,7 +176,6 @@
     tooltip.style.display = 'block';
     tooltip.textContent = texto;
 
-    // Posiciona tooltip respeitando bordas da janela
     const padding = 10;
     let top = event.clientY + 20;
     let left = event.clientX + 20;
@@ -183,4 +199,3 @@
 
 </body>
 </html>
-
