--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <header>
   <!-- Substitua logo.png pelo nome correto se for diferente -->
   <img src="logo.png" alt="Logo DG Manutenção" />
-  <h1>Carregador Inteligente 12V com XL4015</h1>
+  <h1>DG MANUTENÇÃO & ELETRONICA </h1>
 </header>
 
 <main>
